--- a/default.css
+++ b/default.css
@@ -2,33 +2,46 @@ body {
 	padding-top: 20px;
 }
 
-#profile {
+a{
+	color: #337ab7;
+}
+
+a:hover {
+	color: black;
+}
+
+img {
+	max-height: 160px;
+}
+
+.lfont {
+	font-size: 160px;
+}
+
+#name {
 	font-size: 30px;
 	font-weight: bold;
 }
 
 #slogan {
-	font-size: 30px;
+	margin-bottom: 20px;
+	font-size: 20px;
 	font-weight: bold;
 }
 
-#name {
-	font-size: 20px;
-	font-weight: bold;
+#cto {
+	font-size: 60px;
+	line-height: 160px;
+	text-decoration: none;
+}
+#cto span {
+	font-size: 18px;
 }
 
 /*#github {
 	color: #000000;
 }*/
 
-#clojure img {
+/* #clojure img {
 	margin-top: 45px;
-}
-
-img {
-	max-height: 200px;
-}
-
-.lfont {
-	font-size: 200px;
-}
+} */
